feat(slidy-svelte): Progress subcomponent

--- a/packages/svelte/src/components/Slidy/slidy.module.css
+++ b/packages/svelte/src/components/Slidy/slidy.module.css
@@ -16,6 +16,7 @@
 	grid-template: minmax(0, 1fr) / auto minmax(0, 1fr) auto;
 	grid-template-areas:
 		"prev-slide slides next-slide"
+		"progress progress progress"
 		"thumbnail thumbnail thumbnail"
 		"dots dots dots";
 	height: var(--slidy-height, 100%);
