@slidy/core - 3.2.4 improve wheel & loop init

--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -281,6 +281,7 @@ nav#thumbs button {
 
 nav#thumbs {
     gap: 1rem;
+    justify-content: center;
     /* touch-action: auto; */
 }
 
@@ -289,6 +290,7 @@ nav#thumbs button {
     width: 100px;
     height: 100px;
     box-shadow: none;
+    margin: 0;
     /* background-image: attr(data-src url); */
     background-size: cover;
     background-blend-mode: luminosity;
