@slidy/core - clamp

--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -212,7 +212,7 @@ footer {
     color: var(--accent);
     accent-color: var(--accent);
     /* outline-color: var(--accent) !important; */
-    /* will-change: transform, color; */
+    /* will-change: color; */
 }
 
 :disabled {
