--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -1,5 +1,5 @@
-@import "https://unpkg.com/open-props";
-@import "https://unpkg.com/open-props/normalize.min.css";
+@import 'https://unpkg.com/open-props';
+@import 'https://unpkg.com/open-props/normalize.min.css';
 
 :where(li) {
     padding-inline-start: 0;
@@ -8,7 +8,7 @@
 header,
 footer,
 article {
-    margin: var(--size-fluid-2)
+    margin: var(--size-fluid-2);
 }
 
 a {
@@ -109,7 +109,7 @@ form {
     flex-wrap: wrap;
 }
 
-form>* {
+form > * {
     display: flex;
 }
 
@@ -165,7 +165,7 @@ footer {
 :root {
     /* --color: #0a0a0a; */
     /* --back: white; */
-    --accent: #FF3E80;
+    --accent: #ff3e80;
     /* --shadow: whitesmoke; */
 }
 
@@ -293,7 +293,6 @@ nav#thumbs button {
     background-blend-mode: luminosity;
     opacity: 0.25;
 }
-
 
 nav#thumbs button:hover,
 nav#thumbs button.active {
