--- a/www/static/app.css
+++ b/www/static/app.css
@@ -1,11 +1,11 @@
 /* app.css */
-@import "https://unpkg.com/open-props";
-@import "https://unpkg.com/open-props/normalize.min.css";
+@import 'https://unpkg.com/open-props';
+@import 'https://unpkg.com/open-props/normalize.min.css';
 /* @import "open-props/style";
 @import "open-props/normalize"; */
 
 :root {
-    --slidy-height: 75vh;
-    --link: #FF3E80;
-    font-family: var(--font-sans);
+	--slidy-height: 75vh;
+	--link: #ff3e80;
+	font-family: var(--font-sans);
 }
