--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -109,7 +109,7 @@ form {
     flex-wrap: wrap;
 }
 
-form > * {
+form>* {
     display: flex;
 }
 
@@ -262,8 +262,8 @@ nav#thumbs {
 
 #node li,
 nav#thumbs button {
-    flex: 1 0 var(--width);
-    width: var(--width);
+    flex: 1 0 var(--width, auto);
+    width: var(--width, auto);
     height: 100%;
     max-width: 85%;
     max-height: 100%;
@@ -282,10 +282,13 @@ nav#thumbs button {
 nav#thumbs {
     gap: 1rem;
     justify-content: center;
+    max-width: max-content;
+    margin: auto;
 }
 
 nav#thumbs button {
-    min-width: 100px;
+    flex: 1 0 100px;
+    width: 100px;
     height: 100px;
     box-shadow: none;
     margin: 0;
