--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -102,6 +102,7 @@ fieldset {
     margin: 0;
     padding: 0;
     flex-flow: row wrap;
+    gap: 0.25em
 }
 
 form {
@@ -109,7 +110,7 @@ form {
     flex-wrap: wrap;
 }
 
-form > * {
+form>* {
     display: flex;
 }
 
