--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -252,16 +252,13 @@ section {
 #node,
 nav#thumbs {
     list-style: none;
-    margin: 0;
+    margin: auto;
     padding: var(--gap) 0;
     display: flex;
     flex-flow: var(--flow) nowrap;
     gap: var(--gap);
-    min-width: 0;
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
-    margin: auto;
-    /* overflow: visible; */
     /* will-change: transform; */
 }
 
