--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -8,7 +8,13 @@
 header,
 footer,
 article {
-    margin: var(--size-fluid-2);
+    margin: var(--size-fluid-2) auto;
+    width: fit-content;
+}
+
+article {
+    display: grid;
+    gap: var(--size-3);
 }
 
 a {
@@ -111,7 +117,7 @@ form {
     flex-wrap: wrap;
 }
 
-form > * {
+form>* {
     display: flex;
 }
 
@@ -163,6 +169,8 @@ footer {
     justify-content: space-between;
     flex-flow: row wrap;
     gap: 1rem;
+    margin: var(--size-fluid-2);
+    width: auto;
 }
 
 :root {
@@ -229,8 +237,8 @@ footer {
 }
 
 main {
-    height: var(--height, 375px);
-    margin: var(--gap, 1rem) auto;
+    /* height: var(--height, 375px); */
+    /* margin: var(--gap, 1rem) auto; */
     /* overflow: hidden; */
 }
 
@@ -253,12 +261,13 @@ section {
 nav#thumbs {
     list-style: none;
     margin: auto;
-    padding: var(--gap) 0;
+    padding: calc(var(--gap) / 1.5) 0;
     display: flex;
     flex-flow: var(--flow) nowrap;
     gap: var(--gap);
     width: 100%;
     height: 100%;
+    height: var(--height, 375px);
     -webkit-tap-highlight-color: transparent;
     /* will-change: transform; */
 }
@@ -283,9 +292,11 @@ nav#thumbs button {
 }
 
 nav#thumbs {
+    height: 100%;
     gap: 1rem;
     justify-content: center;
     max-width: max-content;
+    flex-flow: row;
 }
 
 nav#thumbs button {
