@slidy/core - 3.4.5 - improve animation

--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -44,15 +44,20 @@ section#s1 {
 }
 
 section#s1 > * {
-    /* flex: 1 0 50% */
+    flex: 1 0 50%;
+    /* width: 50%; */
 }
 
-section#s2 {
-    flex: 1 0 50%;
+section#s2,
+section#s3,
+section#s4 {
+    /* flex: 1 0 50%; */
     display: flex;
 }
 
-section#s2 > * {
+section#s2 > *,
+section#s3 > *,
+section#s4 > * {
     flex: 1 0 30%;
 }
 
