--- a/packages/svelte/src/components/Arrow/arrow.module.css
+++ b/packages/svelte/src/components/Arrow/arrow.module.css
@@ -4,6 +4,9 @@
 	padding: calc(var(--slidy-arrow-size, 16px) * 0.5) !important;
 	z-index: 2;
 	background-color: unset;
+	outline: none;
+	border: none;
+	cursor: pointer;
 }
 
 .slidy-arrow:disabled {
@@ -12,18 +15,26 @@
 }
 
 .slidy-arrow-icon {
-	height: var(--slidy-arrow-size, 24px);
-	width: var(--slidy-arrow-size, 24px);
+	height: var(--slidy-arrow-size, 28px);
+	width: var(--slidy-arrow-size, 28px);
 	fill: white;
 	pointer-events: none;
 	transition: transform 0.15s ease-in-out;
-	background-color: rgb(59 78 78 / 0.75);
+	background-color: #4e4e4ebf;
 	border-radius: 50%;
 }
 
+.slidy-arrow:active {
+	background-color: #4e4e4eef;
+}
+
+.slidy-arrow:focus-visible {
+	background-color: #4e4e4ebf;
+}
+
 .slidy-arrow:focus-visible .slidy-arrow-icon {
-	outline: 1.5px solid rgb(216 201 201 / 0.75);
-	outline-offset: 2px;
+	outline: 2px dashed var(--slidy-focus-ring-color, #c9c9c9e6);
+	outline-offset: -2px;
 	border-radius: 50%;
 }
 
@@ -50,6 +61,6 @@
 
 @media (hover: hover) {
 	.slidy-arrow:hover {
-		background-color: rgb(59 78 78 / 0.33);
+		background-color: #4e4e4e54;
 	}
 }
