--- a/packages/svelte/src/components/Navigation/navigation.module.css
+++ b/packages/svelte/src/components/Navigation/navigation.module.css
@@ -4,29 +4,33 @@
 
 	display: flex;
 	flex-flow: row wrap;
-	gap: calc(var(--slidy-nav-item-size, 16px) * 0.75);
+	gap: calc(var(--slidy-nav-item-size, 24px) * 0.75);
 	place-content: center;
 	width: 100%;
 	height: 100%;
+	padding: 4px;
 	z-index: 1;
 }
 
 .slidy-nav-item {
 	aspect-ratio: 1 / 1;
+	border: none;
+	outline: none;
 	border-radius: var(--slidy-nav-item-radius, 50%);
 	background-color: var(--slidy-nav-item-color, currentColor);
 	opacity: 0.5;
-	width: var(--slidy-nav-item-size, 16px);
-	height: var(--slidy-nav-item-size, 16px);
+	width: var(--slidy-nav-item-size, 24px);
+	height: var(--slidy-nav-item-size, 24px);
 	transition: background-color var(--slidy-duration, 450ms);
+	cursor: pointer;
 }
 
 .slidy-nav-item.active {
 	opacity: 1;
 }
 
-.slidy-nav-item:focus {
-	outline: 1.5px solid var(--slidy-nav-item-color, currentColor);
+.slidy-nav-item:focus-visible {
+	outline: 2px solid var(--slidy-nav-item-color, currentColor);
 	outline-offset: 2px;
 }
 
@@ -36,7 +40,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: calc(var(--slidy-nav-item-size, 16px) * 0.5);
+	font-size: calc(var(--slidy-nav-item-size, 24px) * 0.5);
 	color: white;
 	font-weight: 600;
 	line-height: 1em;
