--- a/packages/svelte/src/components/Arrow/arrow.module.css
+++ b/packages/svelte/src/components/Arrow/arrow.module.css
@@ -1,7 +1,7 @@
 .slidy-arrow {
 	height: 100%;
 	width: auto;
-	padding: calc(var(--slidy-arrow-size, 16px) * 0.5) !important;
+	padding: calc(var(--slidy-arrow-size, 28px) * 0.5) !important;
 	z-index: 2;
 	background-color: unset;
 	outline: none;
@@ -17,10 +17,10 @@
 .slidy-arrow-icon {
 	height: var(--slidy-arrow-size, 28px);
 	width: var(--slidy-arrow-size, 28px);
-	fill: white;
+	fill: var(--slidy-arrow-icon-color, currentColor);
 	pointer-events: none;
 	transition: transform 0.15s ease-in-out;
-	background-color: #4e4e4ebf;
+	background-color: var(--slidy-arrow-bg, #4e4e4ebf);
 	border-radius: 50%;
 }
 
@@ -29,7 +29,7 @@
 }
 
 .slidy-arrow:focus-visible {
-	background-color: #4e4e4ebf;
+	background-color: var(--slidy-arrow-bg, #4e4e4ebf);
 }
 
 .slidy-arrow:focus-visible .slidy-arrow-icon {
@@ -61,6 +61,6 @@
 
 @media (hover: hover) {
 	.slidy-arrow:hover {
-		background-color: #4e4e4e54;
+		background-color: var(--slidy-arrow-bg-hover, #4e4e4e54);
 	}
 }
