chore(slidy-docs): update focus styling

--- a/www/src/styles/globals.css
+++ b/www/src/styles/globals.css
@@ -54,7 +54,7 @@ sup {
 		transition: outline-offset 0.25s ease;
 	}
 
-	/* :focus:not(:active) {
+	:focus:not(:active) {
 		outline-offset: 5px;
-	} */
+	}
 }
