--- a/www/static/app.css
+++ b/www/static/app.css
@@ -1,10 +1,14 @@
 /* app.css */
 @import 'https://unpkg.com/open-props';
-@import 'https://unpkg.com/open-props/normalize.min.css';
+/* @import 'https://unpkg.com/open-props/normalize.min.css'; */
 /* @import "open-props/style";
 @import "open-props/normalize"; */
 
 :root {
 	--link: #ff3e80;
 	font-family: var(--font-sans);
+}
+
+body {
+	background-color: var(--surface-1);
 }
